<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="3"
    android:padding="5dp"
    android:layout_gravity="center"
    android:background="@drawable/dashboard_background">
    <LinearLayout
        android:clipToPadding="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_gravity="center"

        >
        <androidx.cardview.widget.CardView
            android:id="@+id/complain_button"
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            app:cardCornerRadius="10dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/complain"
                android:clickable="true"
                >
                <ImageView
                    android:background="@drawable/complain_image"
                    android:padding="10dp"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_margin="10dp"
                    android:background="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Option_1"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:clipToPadding="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_gravity="center"

        >
        <androidx.cardview.widget.CardView
            android:id="@+id/request_button"
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/request_b"
                android:clickable="true"
                >
                <ImageView
                    android:background="@drawable/purple_colour_background"
                    android:padding="10dp"
                    android:src="@drawable/ic_request"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_margin="10dp"
                    android:background="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Option_2"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/map_button"
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map_b"
                android:clickable="true"
                >
                <ImageView
                    android:background="@drawable/blue_colour_background"
                    android:padding="10dp"
                    android:src="@drawable/ic_map"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_margin="10dp"
                    android:background="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Option_3"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
    <LinearLayout
        android:clipToPadding="false"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:background="@drawable/info"
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_margin="10dp"
                    android:background="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Option_4"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:foreground="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:background="@drawable/blue_colour_background"
                    android:padding="10dp"
                    android:src="@drawable/ic_schedule"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_margin="10dp"
                    android:background="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Option_5"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>